--- a/templates/index.html
+++ b/templates/index.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Book Collection</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <title>Books Database</title>
 </head>
 <body>
-    <h1>Book Collection</h1>
-    <form action="/add" method="post">
-        <label for="title">Title:</label>
-        <input type="text" id="title" name="title" required>
-        <label for="author">Author:</label>
-        <input type="text" id="author" name="author" required>
-        <input type="submit" value="Add Book">
-    </form>
-
-    <div>
-        <h2>Books List</h2>
-        <ul>
-            {% for book in books %}
-                <li>{{ book.title }} by {{ book.author }}</li>
-            {% else %}
-                <li>No books found</li>
-            {% endfor %}
-        </ul>
-    </div>
+    <h1>Books</h1>
+    <a href="/add">Add New Book</a>
+    <table>
+        <tr>
+            <th>Title</th>
+            <th>Author</th>
+            <!-- Add other fields as necessary -->
+            <th>Actions</th>
+        </tr>
+        {% for book in books %}
+        <tr>
+            <td>{{ book.title }}</td>
+            <td>{{ book.author }}</td>
+            <!-- Display other fields -->
+            <td>
+                <a href="/edit/{{ book.id }}">Edit</a>
+                <form action="/delete/{{ book.id }}" method="post">
+                    <button type="submit">Delete</button>
+                </form>
+            </td>
+        </tr>
+        {% endfor %}
+    </table>
 </body>
 </html>
