--- a/templates/index.html
+++ b/templates/index.html
@@ -2,30 +2,50 @@
 <html>
 <head>
     <title>Books Database</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 <body>
-    <h1>Books</h1>
-    <a href="/add">Add New Book</a>
-    <table>
-        <tr>
-            <th>Title</th>
-            <th>Author</th>
-            <!-- Add other fields as necessary -->
-            <th>Actions</th>
-        </tr>
-        {% for book in books %}
-        <tr>
-            <td>{{ book.title }}</td>
-            <td>{{ book.author }}</td>
-            <!-- Display other fields -->
-            <td>
-                <a href="/edit/{{ book.id }}">Edit</a>
-                <form action="/delete/{{ book.id }}" method="post">
-                    <button type="submit">Delete</button>
-                </form>
-            </td>
-        </tr>
-        {% endfor %}
-    </table>
+    <div class="container mt-4">
+        <h1 class="mb-4">Books</h1>
+        <a href="/add" class="btn btn-primary mb-3">Add New Book</a>
+        <table class="table">
+            <thead class="thead-dark">
+                <tr>
+                    <th>Image</th>
+                    <th>Title</th>
+                    <th>Author</th>
+                    <th>Type</th>
+                    <th>Year</th>
+                    <!-- Add other fields as necessary -->
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for book in books %}
+                <tr>
+                    <td>{{ book.image }}</td>
+                    <td>{{ book.title }}</td>
+                    <td>{{ book.author }}</td>
+                    <td>{{ book.type }}</td>
+                    <td>{{ book.year }}</td>
+                    <!-- Display other fields -->
+                    <td>
+                        <a href="/edit/{{ book.id }}" class="btn btn-sm btn-secondary">Edit</a>
+                        <form action="/delete/{{ book.id }}" method="post" style="display:inline;">
+                            <button type="submit" class="btn btn-sm btn-danger">Delete</button>
+                        </form>
+                    </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
 </html>
