Added funcionality: Displaying images

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
             <tbody>
                 {% for book in books %}
                 <tr>
-                    <td>{{ book.image }}</td>
+                    <td><img src="{{ url_for('static', filename='images/' + book.image) }}" alt="Book image" height="200"></td>
                     <td>{{ book.title }}</td>
                     <td>{{ book.author }}</td>
                     <td>{{ book.type }}</td>
