--- a/templates/index.html
+++ b/templates/index.html
@@ -24,8 +24,13 @@
             <tbody>
                 {% for book in books %}
                 <tr>
-                    <!-- NUTNO VYRESIT ERROR KDYZ BOOK.IMAGE JE NONE -->
-                    <td><img src="{{ url_for('static', filename='images/' + book.image) }}" alt="Book image" height="200"></td>
+                    <td>
+                        {% if book.image %}
+                          <img src="{{ url_for('static', filename='images/' + book.image) }}" alt="Book image" height="200">
+                        {% else %}
+                          <img src="{{ url_for('static', filename='images/default.jpg') }}" alt="No image available" height="200">
+                        {% endif %}
+                      </td>                      
                     <td>{{ book.title }}</td>
                     <td>{{ book.author }}</td>
                     <td>{{ book.type }}</td>
